# ChemLint

./: README.md  deploy_mcp_server.sh  install.sh  manual_test_dash.py  pyproject.toml  test_canonicalization_matching.py  test_dash_histogram.py  test_dash_simple.py  test_ensemble.py  test_hyperparam_tuning.py  test_quality_analyze_functions.py  test_quality_report.py  test_transform_column.py
.github/: copilot-instructions.md
mcp_client_configs/: configure_claude.sh
src/chemlint/: config.py  constants.py  server.py
src/chemlint.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chemlint/infrastructure/: resources.py  supported_resource_types.py
src/molml_mcp/: config.py  constants.py  server.py
src/molml_mcp/infrastructure/: logging.py  logistics.py  resources.py  supported_resource_types.py
src/molml_mcp/resources/: logistics.py
src/molml_mcp/tools/: __init__.py  demo.py
tests/: conftest.py  run_all_analyze_tests.sh  setup_testing_logistics.py  test_analyze_activity_distribution.py  test_analyze_functional_groups.py  test_analyze_salts_fragments_solvents.py  test_analyze_smiles_validity.py  test_analyze_split_characteristics.py  test_analyze_split_characteristics_integration.py  test_analyze_split_characteristics_stress.py  test_evaluate_cv_models.py  test_evaluate_model.py  test_predict_cv_models.py  test_regression.py  test_server.py
tests/data/: dummy_quality_report.csv  dummy_small_random_test_split.csv  dummy_small_random_train_split.csv
tests/infrastructure/: test_resources.py
tests/tools/cleaning/: test_mol_cleaning.py
tests/tools/clustering/: test_clust.py
tests/tools/core/: test_dataset_ops.py  test_dim_reduction.py  test_filtering.py  test_outliers.py  test_statistics.py
tests/tools/core_mol/: test_activity_cliffs.py  test_complexity.py  test_data_splitting.py  test_scaffolds.py  test_similarity.py  test_smiles_ops.py  test_substructure_matching.py
tests/tools/featurization/: test_complex_descriptors.py  test_simple_descriptors.py  test_smiles_encoding.py
tests/tools/ml/: test_cross_validation.py  test_evaluation.py  test_hyperparam_tuning.py  test_metrics.py  test_training.py  (+1 more)
(+98 files in other folders)
