[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molml-mcp"
version = "0.1.0"
description = "MCP server for molecular machine learning"
requires-python = ">=3.13"

dependencies = [
    "mcp[cli]>=1.20.0",
    "rdkit>=2025.9.1",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "cairosvg>=2.8.2",
    "joblib>=1.5.2",
    "kneed>=0.8.5",
    "plotnine>=0.15.2",
    "statsmodels>=0.14.0",
    "pytest>=9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:rdkit.*",
]
