[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molml-mcp"
version = "0.1.0"
description = "MCP server for molecular machine learning"
requires-python = ">=3.13"

dependencies = [
    "mcp[cli]>=1.20.0",
    "rdkit>=2025.9.1",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "cairosvg>=2.8.2",
    "joblib>=1.5.2",
    "kneed>=0.8.5",
    "statsmodels>=0.14.0",
    "pytest>=9.0.2",
    "plotly>=6.5.2",
    "dash>=3.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:rdkit.*",
]
markers = [
    "slow: marks tests as slow (taking longer than 1 second) (deselect with '-m \"not slow\"')",
    "server: marks tests for server initialization (run with '-m server')",
]
